Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25544

Regression (Mac): calling setEnabled on a QMenu added to the menu bar doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.8.4, 5.0.0 Beta 2
    • 4.8.1, 5.0.0 Beta 1
    • GUI: Look'n'Feel
    • None
    • Mac OS X 10.6
    • macOS
    • d412f11cea4dc336c684aafcd8979d5cec751cb5 (4.8) 356f3c89b83704591e3c37cf8c322b52d6840763 (5.0)

    Description

      1) add a menu to a menu bar
      2) add some menu items to the menu, so it's possible to see if the menu is enabled or not
      3) call setEnabled(true/false) from somewhere in the application

      Expected outcome: The menu in the menu bar gets enabled/disabled accordingly (i.e. it's menu items get enabled/disabled)
      Actual outcome: the original state of the menu persists.

      This broke with 8f23a6be1069455e609e8bea7527726c24bebb36 (Change-Id: Ic181dfa26a71acad0067f5269c72517b50b17362)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pamatila Pasi Matilainen (Inactive)
            con Eike Ziller
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes