src/gui/widgets/qmenu.cpp
@@ -2387,7 +2387,7 @@ void QMenu::changeEvent(QEvent *e)
         if (d->tornPopup) // torn-off menu
             d->tornPopup->setEnabled(isEnabled());
         d->menuAction->setEnabled(isEnabled());
-#ifdef Q_WS_MAC
+#if defined(Q_WS_MAC) && !defined(QT_MAC_USE_COCOA)
         if (d->mac_menu)
             d->setMacMenuEnabled(isEnabled());
 #endif
